--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#" id="logo"><img src="omg/img/g1.jpg" alt="" style="width: 250px; height: 80px;"></a>
+              <a class="navbar-brand" href="#" id="logo"><img src="/Coffee/Img/g1.jpg" alt="" style="width: 250px; height: 80px;"></a>
               <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -116,7 +116,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="omg/img/g2.avif" class="d-block w-100" alt="...">
+                <img src="/Coffee/Img/g2.avif" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                     <h2>Start Your Day with a</h2>
                     <p>Some representative placeholder content for the second slide.</p>
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="omg/img/g3.webp" class="d-block w-100" alt="...">
+                <img src="/Coffee/Img/g3.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                   <h2>Start Your Day with a</h2>
                   <p>Some representative placeholder content for the second slide.</p>
@@ -134,7 +134,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="omg/img/logo3.webp" class="d-block w-100" alt="...">
+                <img src="/Coffee/Img/logo3.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption  d-md-block">
                     <h2>Start Your Day with a</h2>
                     <p>Some representative placeholder content for the second slide.</p>
@@ -162,7 +162,7 @@
             <div class="row py-4">
                 <div class="col-md-6">
                     <div class="card">
-               <img src="omg/img/g5.jpg" alt="" class="img-fluid">
+               <img src="/Coffee/Img/g5.jpg" alt="" class="img-fluid">
                </div>
                 </div>
                 <div class="col-md-6">
@@ -183,19 +183,19 @@
             <div class="row py-4">
                 <div class="col-md-4">
                <div class="card">
-                <img src="omg/img/g8.jpg" alt="">
+                <img src="/Coffee/Img/g8.jpg" alt="">
                </div>
                 </div>
 
                 <div class="col-md-4">
                     <div class="card">
-                     <img src="omg/img/g7.jpg!d" alt="">
+                     <img src="/Coffee/Img/g7.jpg!d" alt="">
                     </div>
                      </div>
 
                      <div class="col-md-4">
                         <div class="card">
-                         <img src="omg/img/g6.jpg" alt="">
+                         <img src="/Coffee/Img/g6.jpg" alt="">
                         </div>
                          </div>
             </div>
@@ -209,7 +209,7 @@
          <div class="row py-4">
             <div class="col-md-3 py-4">
                 <div class="card">
-                <img src="omg/img/g10.jpeg" alt="" class="img-fluid">
+                <img src="/Coffee/Img/g10.jpeg" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Macchiato</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -228,7 +228,7 @@
 
             <div class="col-md-3 py-4">
                 <div class="card">
-                <img src="omg/img/j4.jpg" alt="" class="img-fluid">
+                <img src="/Coffee/Img/j4.jpg" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Ristretto</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -247,7 +247,7 @@
 
             <div class="col-md-3 py-4">
                 <div class="card">
-                <img src="omg/img/g8.jpg" alt="" class="img-fluid">
+                <img src="/Coffee/Img/g8.jpg" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Cafe'Latte</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -266,7 +266,7 @@
 
             <div class="col-md-3 py-4">
                 <div class="card">
-                <img src="omg/img/g7.jpg!d" alt="" class="img-fluid">
+                <img src="/Coffee/Img/g7.jpg!d" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Flat White</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -285,7 +285,7 @@
 
             <div class="col-md-3">
                 <div class="card">
-                <img src="omg/img/j1.jpg" alt="" class="img-fluid">
+                <img src="/Coffee/Img/j1.jpg" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Piccolo Latte</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -304,7 +304,7 @@
 
             <div class="col-md-3">
                 <div class="card">
-                <img src="omg/img/j2.webp" alt="" class="img-fluid">
+                <img src="/Coffee/Img/j2.webp" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Mocha</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -323,7 +323,7 @@
 
             <div class="col-md-3">
                 <div class="card">
-                <img src="omg/img/j3.jpeg" alt="" class="img-fluid">
+                <img src="/Coffee/Img/j3.jpeg" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Affogoto</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -342,7 +342,7 @@
 
             <div class="col-md-3">
                 <div class="card">
-                <img src="omg/img/g7.jpg!d" alt="" class="img-fluid">
+                <img src="/Coffee/Img/g7.jpg!d" alt="" class="img-fluid">
                 <div class="card-body">
                     <h4 class="text-center">Irish Coffee</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, repudiandae.</p>
@@ -370,7 +370,7 @@
         <div class="row">
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k1.webp" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k1.webp" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Arabic Coffee</h3>
               <p>$120 <STrike>$150</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -380,7 +380,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k2.webp" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k2.webp" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Cappu Coffee</h3>
               <p>$250 <STrike>$350</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -390,7 +390,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k3.jpg" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k3.jpg" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Black Coffee</h3>
               <p>$130 <STrike>$200</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -400,7 +400,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k4.webp" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k4.webp" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Decaf Coffee</h3>
               <p>$100 <STrike>$120</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -410,7 +410,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k5.jpeg" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k5.jpeg" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Arabic Coffee</h3>
               <p>$120 <STrike>$150</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -420,7 +420,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k6.avif" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k6.avif" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Cappu Coffee</h3>
               <p>$250 <STrike>$350</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -430,7 +430,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k7.jpg" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k7.jpg" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Black Coffee</h3>
               <p>$130 <STrike>$200</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -440,7 +440,7 @@
 
          <div class="col-md-3 py-3">
           <div class="card">
-            <img src="omg/img/k8.jpg" alt="" class="img-fluid">
+            <img src="/Coffee/Img/k8.jpg" alt="" class="img-fluid">
             <div class="card-body text-center">
               <h3>Decaf Coffee</h3>
               <p>$100 <STrike>$120</STrike> <span class="fa-solid fa-cart-shopping"></span></p>
@@ -458,37 +458,37 @@
     <div class="row py-4">
      <div class="col-md-4">
       <div class="card">
-        <img src="omg/img/m1.avif" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m1.avif" alt="" class="img-fluid">
       </div>
      </div>
 
      <div class="col-md-4">
       <div class="card">
-        <img src="omg/img/m2.jpg" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m2.jpg" alt="" class="img-fluid">
       </div>
      </div>
 
      <div class="col-md-4">
       <div class="card">
-        <img src="omg/img/m3.jpg" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m3.jpg" alt="" class="img-fluid">
       </div>
      </div>
 
      <div class="col-md-4 py-4">
       <div class="card">
-        <img src="omg/img/m4.webp" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m4.webp" alt="" class="img-fluid">
       </div>
      </div>
 
      <div class="col-md-4 py-4">
       <div class="card">
-        <img src="omg/img/m5.jpg" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m5.jpg" alt="" class="img-fluid">
       </div>
      </div>
 
      <div class="col-md-4 py-4">
       <div class="card">
-        <img src="omg/img/m6.jpg" alt="" class="img-fluid">
+        <img src="/Coffee/Img/m5.jpg" alt="" class="img-fluid">
       </div>
      </div>
 
