--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
      <div class="col-md-4 py-4">
       <div class="card">
-        <img src="/Coffee/Img/m5.jpg" alt="" class="img-fluid">
+        <img src="/Coffee/Img/g5.jpg" alt="" class="img-fluid">
       </div>
      </div>
 
@@ -497,7 +497,7 @@
     </section>
 
     <section id="contact">
-      <div class="container py-5">
+      <div class="container-fluid pt-5">
         <h1 class="text-center">Contact <span class="text-primary">Us</span></h1>
         <hr class="w-25 m-auto">
         <div class="row py-4">
